--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="main.css">
+        <link rel="stylesheet" type="text/css" href="styles/main.css">
         <title>청소년을위한홈페이지</title>
         </head>
 
@@ -12,7 +12,7 @@
                 <p><img src="img/maintxt.png" width="60%"></p>
             </div>
 
-            <div class="photo1">              
+            <div class="photo1">        
                <div class="txt_eun">
                     <a href="eun.html"><img src="img/texteun.png" width= "30%"></a>
                 </div>
