--- a/ma.html
+++ b/ma.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="ma.css">
+        <link rel="stylesheet" type="text/css" href="styles/ma.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@700&family=Poor+Story&family=Road+Rage&display=swap" rel="stylesheet">
@@ -45,7 +45,7 @@
                                         <li><a href="http://www.mycc.or.kr/">마포청소년문화의집</li></a>
                                      </ul>
                                 </dd>
-                                <dt><a href="http://kko.to/Wz92WAvrm" target="map">망원동</dt></a>
+                                <dt><a href="https://map.kakao.com/" target="map">망원동</dt></a>
                                 <dd>
                                     <ul type = "disc">
                                         <li><a href="http://www.mwyouth.org/">구립망원청소년문화센터</li></a>
@@ -56,14 +56,14 @@
                         </div>
                         <div class="txt1">
                             <dl>
-                                <dt><a href="http://kko.to/XM5NfZw4b" target="map">성산동</dt></a>
+                                <dt><a href="https://map.kakao.com/" target="map">성산동</dt></a>
                                 <dd>
                                     <ul type = "disc">
                                         <li><a href="http://www.youthnaroo.or.kr/main.php">시립마포청소년센터</li></a>
                                         <li><a href="https://mplib.mapo.go.kr/myedu/index.do">마포청소년교육센터</li></a>
                                      </ul>
                                 </dd><br>
-                                <dt><a href="http://kko.to/D8K8muT0Y" target="map">도화동</dt></a>
+                                <dt><a href="https://map.kakao.com/" target="map">도화동</dt></a>
                                 <dd>
                                     <ul type = "disc">
                                         <li><a href="http://dhyouth.or.kr/">구립도화청소년문화의집</li></a>
