--- a/seo.html
+++ b/seo.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="seo.css">
+        <link rel="stylesheet" type="text/css" href="styles/seo.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Gowun+Batang:wght@700&family=Poor+Story&family=Road+Rage&display=swap" rel="stylesheet">
@@ -40,14 +40,14 @@
                     <div class="txt"><!---글자나열--->
                         <div class="txt1">
                             <dl>
-                                <dt><a href="http://kko.to/ACrq5lWfj" target="map">홍은동</a></dt>
+                                <dt><a href="https://map.kakao.com/" target="map">홍은동</a></dt>
                                 <dd>
                                     <ul type = "disc">
                                         <li><a href="http://hyc.or.kr/?is_home=1">구립홍은청소년문화의집</a></li>
                                         <li><a href="http://myway1318.or.kr/?is_home=1">서대문진로직업체험지원센터</li></a>
                                      </ul>
                                 </dd><br>
-                                <dt><a href="http://kko.to/qz8sOpmh-" target="map">북가좌동</dt></a>
+                                <dt><a href="https://map.kakao.com/" target="map">북가좌동</dt></a>
                                 <dd>
                                     <ul type = "disc">
                                         <li><a href="http://www.sdm7979.or.kr/">서대문구청소년상담복지센터</a></li>
@@ -58,13 +58,13 @@
                         </div>
                         <div class="txt1">
                             <dl><br>
-                                <dt><a href="http://kko.to/0kjy22W40" target="map">연희동</dt></a>
+                                <dt><a href="https://map.kakao.com/" target="map">연희동</dt></a>
                                 <dd>
                                     <ul type = "disc">
                                         <li><a href="http://www.fun1318.or.kr/2021/">시립서대문청소년센터</li></a>
                                      </ul>
                                 </dd>
-                                <dt><a href="http://kko.to/iuJPf0vCI" target="map">신촌동</a>     
+                                <dt><a href="https://map.kakao.com/" target="map">신촌동</a>     
                                 </dt>
                                 <dd>
                                     <ul type = "disc">
